--- a/01-initial/Dockerfile
+++ b/01-initial/Dockerfile
@@ -4,11 +4,11 @@ RUN apt-get update && apt-get -y upgrade && apt-get install -y libxrender-dev li
 
 RUN mkdir -p /opt
 ADD files/Xilinx_Vivado_SDK_2016.1_0409_1_Lin64.bin /opt/Xilinx_Vivado_SDK_2016.1_0409_1_Lin64.bin
-RUN chmod +x /opt/Xilinx_Vivado_SDK_2016.1_0409_1_Lin64.bin
+ADD files/install_config.txt /opt/install_config.txt
 ADD files/install.sh /opt/install.sh
 
-ENV DISPLAY :0
+RUN chmod +x /opt/Xilinx_Vivado_SDK_2016.1_0409_1_Lin64.bin
 
-EXPOSE 5900
+ENV DISPLAY :0
 
 CMD ["/opt/install.sh"]
