--- a/01-initial/Dockerfile
+++ b/01-initial/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:16.04
 
-RUN apt-get update && apt-get -y upgrade && apt-get install -y libxrender-dev libxtst-dev vnc4server twm
+RUN apt-get update && apt-get -y upgrade && apt-get install -y build-essential libxrender-dev libxtst-dev vnc4server twm
 
 RUN mkdir -p /opt
 ADD files/Xilinx_Vivado_SDK_2016.1_0409_1_Lin64.bin /opt/Xilinx_Vivado_SDK_2016.1_0409_1_Lin64.bin
