Remove an extra tar extraction from the install script and fix some issues with the Dockerfile wget and tar extraction.

--- a/02-install/Dockerfile
+++ b/02-install/Dockerfile
@@ -1,14 +1,16 @@
 FROM ubuntu:18.04-updated
 
 RUN mkdir -p /opt
-CMD ls -alh
-RUN echo "Getting Vivado_2018.2.tar.gz from CERNBox ... "
-RUN x=$(wget -q -O - https://cernbox.cern.ch/index.php/s/S9IBjrEjWVCeXYy \
+RUN ls -alh
+RUN x=$(wget -q -O - https://cernbox.cern.ch/index.php/s/KTD0iNlea0ecqnr \
     | grep downloadURL | grep -Eo "(http|https)://[a-zA-Z0-9./?=_-]*") \
-    && wget -O /opt/Vivado_2018.2.tar.gz $x \
-    | tar -xzf -C /opt/ /opt/Vivado_2018.2.tar.gz \
+    && wget -O /opt/Vivado_2018.2.tar.gz $x
+RUN ls -alh
+RUN ls -alh /opt/
+RUN tar -xzf -C /opt/ Vivado_2018.2.tar.gz \
     && rm /opt/Vivado_2018.2.tar.gz
-CMD ls -alh
+RUN ls -alh
+RUN ls -alh /opt/
 COPY files/install_config.txt /opt/install_config.txt
 COPY files/install.sh /opt/install.sh
 
