Add the pv program to the apt-get command.

--- a/01-initial/Dockerfile
+++ b/01-initial/Dockerfile
@@ -1,3 +1,3 @@
 FROM ubuntu:18.04
 
-RUN apt-get update && apt-get -y upgrade && apt-get install -y build-essential libxrender-dev libxtst-dev vnc4server twm wget
+RUN apt-get update && apt-get -y upgrade && apt-get install -y build-essential libxrender-dev libxtst-dev vnc4server twm wget pv
