Reduce the verbosity of the wget command

--- a/02-install/Dockerfile
+++ b/02-install/Dockerfile
@@ -6,7 +6,7 @@ COPY files/install.sh /opt/install.sh
 RUN mkdir -p /opt \
     && x=$(wget -q -O - https://cernbox.cern.ch/index.php/s/KTD0iNlea0ecqnr \
     | grep downloadURL | grep -Eo "(http|https)://[a-zA-Z0-9./?=_-]*") \
-    && wget -O /opt/Vivado_2018.2.tar.gz $x \
+    && wget -q -O /opt/Vivado_2018.2.tar.gz $x \
     && pv /opt/Vivado_2018.2.tar.gz | tar -xzf - --directory /opt/ \
     && rm /opt/Vivado_2018.2.tar.gz \
     && chmod +x /opt/Vivado_2018.2/xsetup \
