Comment out the docker host.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build docker image with dind:
       # Note that if you're using Kubernetes executor, the variable should be set to
       # tcp://localhost:2375 because of how Kubernetes executor connects services
       # to the job container
-      DOCKER_HOST: tcp://docker:2375/
+      #DOCKER_HOST: tcp://docker:2375/
       # When using dind, it's wise to use the overlayfs driver for
       # improved performance.
       DOCKER_DRIVER: overlay2
