--- a/02-install/Dockerfile
+++ b/02-install/Dockerfile
@@ -4,7 +4,7 @@ FROM gitlab-registry.cern.ch/aperloff/vivado-docker/ubuntu-updated
 COPY files/install_config.txt /opt/install_config.txt
 COPY files/install.sh /opt/install.sh
 
-RUN df -i \
+RUN df -ih \
     && mkdir -p /opt \
     && x=$(wget -q -O - https://cernbox.cern.ch/index.php/s/KTD0iNlea0ecqnr \
     | grep downloadURL | grep -Eo "(http|https)://[a-zA-Z0-9./?=_-]*") \
@@ -13,6 +13,6 @@ RUN df -i \
     && rm /opt/Vivado_2018.2.tar.gz \
     && chmod +x /opt/Vivado_2018.2/xsetup \
     && /opt/install.sh \
-    && df -i
+    && df -ih
 
 ENV DISPLAY :0
