Update the CERNBox link to the installation file.

--- a/02-install/Dockerfile
+++ b/02-install/Dockerfile
@@ -6,7 +6,7 @@ COPY files/install.sh /opt/install.sh
 
 RUN df -ih \
     && mkdir -p /opt \
-    && x=$(wget -q -O - https://cernbox.cern.ch/index.php/s/KTD0iNlea0ecqnr \
+    && x=$(wget -q -O - https://cernbox.cern.ch/index.php/s/xWjUduHViLUR9s4 \
     | grep downloadURL | grep -Eo "(http|https)://[a-zA-Z0-9./?=_-]*") \
     && wget -q -O /opt/Xilinx_Vivado_SDK_2019.1_0524_1430.tar.gz $x \
     && pv /opt/Xilinx_Vivado_SDK_2019.1_0524_1430.tar.gz | tar -xzf - --directory /opt/ \
