Double check that the comments aren't messing up the build.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,10 +39,10 @@ build_ubuntu_vivado_vnc:
     <<: *template_build
     variables:
         CONTEXT_DIR: ${OS}/01-${VIEW}/
-        FROM: ${OS}:${OS_VERSION} #${CI_REGISTRY_IMAGE}/ubuntu-updated:latest
+        FROM: ${OS}:${OS_VERSION}
         OS: ubuntu
         OS_VERSION: "18.04"
-        TO: ${CI_REGISTRY_IMAGE}/${OS}${OS_VERSION}_vivado${VIVADO_VERSION}_${VIEW}:latest #${CI_REGISTRY_IMAGE}/vivado:latest
+        TO: ${CI_REGISTRY_IMAGE}/${OS}${OS_VERSION}_vivado${VIVADO_VERSION}_${VIEW}:latest
         VIEW: vnc
         VIVADO_VERSION: "2019.1"
 
@@ -50,10 +50,10 @@ build_sl_vivado_x11:
     <<: *template_build
     variables:
         CONTEXT_DIR: ${OS}/01-${VIEW}/
-        FROM: ${OS}:${OS_VERSION} #${CI_REGISTRY_IMAGE}/ubuntu-updated:latest
+        FROM: ${OS}:${OS_VERSION}
         OS: sl
         OS_VERSION: "7"
-        TO: ${CI_REGISTRY_IMAGE}/${OS}${OS_VERSION}_vivado${VIVADO_VERSION}_${VIEW}:latest #${CI_REGISTRY_IMAGE}/vivado:latest
+        TO: ${CI_REGISTRY_IMAGE}/${OS}${OS_VERSION}_vivado${VIVADO_VERSION}_${VIEW}:latest
         VIEW: X11
         VIVADO_VERSION: "2019.1"
 
