--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,10 +33,10 @@ stages:
         - df -ih
 
 # Jobs ------------------------------------------------------------------------
-build_ubuntu_vivado_vnc:
+build_ubuntu_vivado2019-1_vnc:
     <<: *template_build
     variables:
-        CONTEXT_DIR: ${OS}/01-${VIEW}/
+        CONTEXT_DIR: ${OS}/${VIVADO_VERSION}/${VIEW}/
         FROM: ${OS}:${OS_VERSION}
         OS: ubuntu
         OS_VERSION: "18.04"
@@ -44,10 +44,10 @@ build_ubuntu_vivado_vnc:
         VIEW: vnc
         VIVADO_VERSION: "2019.1"
 
-build_sl_vivado_x11:
+build_sl_vivado2019-1_x11:
     <<: *template_build
     variables:
-        CONTEXT_DIR: ${OS}/01-${VIEW}/
+        CONTEXT_DIR: ${OS}/${VIVADO_VERSION}/${VIEW}/
         FROM: ${OS}:${OS_VERSION}
         OS: sl
         OS_VERSION: "7"
@@ -55,6 +55,16 @@ build_sl_vivado_x11:
         VIEW: x11
         VIVADO_VERSION: "2019.1"
 
+build_sl_vivado2018-2_x11:
+    <<: *template_build
+    variables:
+        CONTEXT_DIR: ${OS}/${VIVADO_VERSION}/${VIEW}/
+        FROM: ${OS}:${OS_VERSION}
+        OS: sl
+        OS_VERSION: "7"
+        TO: ${CI_REGISTRY_IMAGE}/${OS}${OS_VERSION}_vivado${VIVADO_VERSION}_${VIEW}:latest
+        VIEW: x11
+        VIVADO_VERSION: "2018.2"
 
 #build_image_using_kaniko:
 #    stage: build
