Switch from using the YAML anchors to using the extends entry definted by GitLab.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
     - build
 
 # Job templates ---------------------------------------------------------------
-.job_template: &template_build
+.job_template:
     stage: build
     only:
       changes:
