--- a/sl/2019.1/x11/.gitlab-ci.yml
+++ b/sl/2019.1/x11/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 build_sl_vivado2019-1_x11:
-    <<: *template_build
+    extends: .job_template
     variables:
         OS: sl
         OS_VERSION: "7"
