Fix a syntax error in the CI config file.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ stages:
 .job_template:
     stage: build
     only:
-      - changes:
+      changes:
         - $CONTEXT_DIR/Dockerfile
         - $CONTEXT_DIR/**/*
         - web
