Temporarily remove the only and except clauses of the CI config file.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,14 +13,14 @@ stages:
 # Job templates ---------------------------------------------------------------
 .job_template:
     stage: build
-    only:
-      changes:
-        - $CONTEXT_DIR/Dockerfile
-        - $CONTEXT_DIR/**/*
-        - web
-    except:
-      changes:
-        - "*.md"
+#    only:
+#      changes:
+#        - $CONTEXT_DIR/Dockerfile
+#        - $CONTEXT_DIR/**/*
+#        - web
+#    except:
+#      changes:
+#        - "*.md"
     tags:
         - docker-privileged-xl
     image: 
